--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
     "babel-jest": "^30.1.2",
-    "jest": "^30.1.3"
+    "css-loader": "^7.1.2",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.4",
+    "jest": "^30.1.3",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.101.3",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   },
   "scripts": {
-    "test": "jest",
-    "watch": "jest --watch *.js"
+    "test": "jest"
   }
 }
